<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">A.ACatering</string>
    <string name="title_shop">Shop</string>
    <string name="title_gifts">Gifts</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="profile_fragment">My Profile</string>
    <string name="store_fragment">My Store</string>
    <string name="title_activity_maps">Map</string>
    <string name="Lat">Latitude</string>
    <string name="Lng">Longitude</string>
    <string name="Add">Nama</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="nama">Nama Lengkap</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">SIGN IN</string>
    <string name="btn_sign_in_fb">SIGN IN WITH FACEBOOK</string>
    <string name="btn_sign_in_g">SIGN IN WITH GOOGLE</string>
    <string name="btn_link_to_register">Buat Akun Baru</string>
    <string name="btn_link_to_login">Sudah Mendaftar. Login!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Lupa Password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="action_settings">Settings</string>
    <string name="action_leave">Sign out</string>
    <string name="facebook_app_id">335706460584535</string>
    <string name="fb_login_protocol_scheme">fb335706460584535</string>
    <string name="cancel_login">Login Canceled</string>
    <string name="error_login">Login Errors</string>
    <string name="firebase_error_login">Firebase Error</string>
    <string name="facebook_status_fmt">Facebook Status</string>
    <string name="firebase_status_fmt">Firebase Status</string>
    <string name="action_search">Cari</string>
    <string name="notif">Notifikasi</string>
    <string name="title_activity_cari_guru">CariGuru</string>
    <string name="bio">Biodata</string>
    <string name="pend">Pendidikan</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">Nomor Handphone</string>
    <string name="edit">Edit</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="jk">Jenis Kelamin</string>
    <string name="lk">Laki-laki</string>
    <string name="pr">Perempuan</string>
    <string name="nisn">NISN</string>
    <string name="kelas">Kelas</string>
    <string name="nama_sekolah">Nama Sekolah</string>
    <string name="photo_profile">Photo Profile</string>
    <string name="string_choose_file">Chouse Image</string>
    <string name="string_upload_image">Upload Images</string>
    <string name="string_view_image">View Images</string>
    <string name="password">Password</string>
    <string name="tv_nama_detail_paket">Detail paket yang dipesan</string>
    <string name="paket_menu">Menu Paket</string>
    <string name="simpan">Simpan</string>
    <string name="jumlah_paket">Jumlah Paket</string>
    <string name="paket_rp">Rp</string>
    <string name="paket_bonus">Bonus</string>
    <string name="harga_per_paket">Harga/Paket</string>
    <string name="jumlah_total">Harga Total</string>
    <string name="pesan">Pesan</string>
    <string name="tangal">Tanggal</string>
    <string name="drtail_paket_pesanan">Detail Paket yang di Pesan</string>
    <string name="title_activity_place_picker">Map</string>
    <string name="paket_menu_utama">Menu Makanan Utama :</string>
    <string name="paket_menu_pembuka">Menu Makanan Pembuka :</string>
    <string name="paket_menu_penutup">Menu Makanan Penutup :</string>
    <string name="paket_menu_makanan_pondok">Menu Makanan Pondok :</string>
    <string name="pesan_tambahan">Pesan Tambahan</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="PT">PT. ANUGRAH AMAL CITRABOGATAMA \nJl. Kasah No. 35 Tangkerang Tengah \nPekanbaru 28284, Riau</string>
    <string name="telpon">No. Telepon</string>
    <string name="telp">(0761) 856882</string>
    <string name="hp">No. HP</string>
    <string name="nohp">0823 9027 8882</string>
    <string name="fax">fax</string>
    <string name="nofax">(0761) 7893230</string>
    <string name="jenis">Jenis Usaha</string>
    <string name="jenisusaha">Jasa Boga</string>
    <string name="cp">Contact Person</string>
    <string name="nocp">Benny Septiadi</string>
    <string name="web">Website</string>
    <string name="website">www.aa-catering.com</string>
    <string name="emailnya">benny@aa-catering.com \nmarketing_pku@aa-catering.com</string>
    <string name="username">Username</string>
    <string name="agama">Agama</string>
    <string name="update">Update</string>
</resources>
